<resources>
    <string name="app_name">V-REP Controller</string>

    <!-- MainActivity -->

    <string name="text_vrep">V-REP</string>
    <string name="text_controller">CONTROLLER</string>

    <string name="text_tooltip">Ensure that the Server Adapter and V-REP with the loaded scene file are open.</string>
    <string name="text_ip">IP Address</string>
    <string name="input_ip">10.177.2.56</string>
    <string name="text_port">Port</string>
    <string name="input_port">6789</string>
    <string name="text_connect">Connect</string>

    <string name="msg_remoteApiConnectReq">REMOTEAPI_CONNECTREQ</string>
    <string name="msg_remoteApiConnectAccept">REMOTEAPI_CONNECTACCEPT</string>
    <string name="str_clientID">clientID</string>
    <string name="toast_connToServerAccept">Connection to server accepted.</string>
    <string name="toast_handshakeError">Handshake error</string>
    <string name="toast_cantConnectError">Error! Cannot Connect.</string>
    <string name="toast_invalidIPFormat">Invalid IP format</string>

    <!-- ControlActivity -->

    <string name="text_connected">CONNECTED</string>
    <string name="text_disconnected">DISCONNECTED</string>
    <string name="placeholder_connDetails">IP and Port of server</string>

    <string name="text_mode">MODE</string>
    <string name="text_sensor">SENSOR</string>
    <string name="text_button">BUTTON</string>
    <string name="text_simulation">SIMULATION</string>
    <string name="text_holdToGrab">HOLD TO \nGRAB</string>
    <string name="text_disconnect">DISCONNECT</string>

    <string name="msg_simulation">SIMULATION</string>
    <string name="msg_movementdata">MOVEMENTDATA</string>
    <string name="msg_movementdataviabutton">MOVEMENTDATAVIABUTTON</string>
    <string name="msg_gripperdata">GRIPPERDATA</string>
    <string name="msg_reqcolordata">REQCOLORDATA</string>
    <string name="msg_servershutdown">REQSHUTDOWN</string>

    <string name="toast_simulationStarted">Simulation started</string>
    <string name="toast_simulationPaused">Simulation paused</string>
    <string name="toast_simulationStopped">Simulation stopped</string>
    <string name="toast_buttonModeEnabled">Button control mode enabled</string>
    <string name="toast_sensorModeEnabled">Sensor control mode enabled</string>

    <string name="dialog_connection_error_title">Connection Error</string>


</resources>
