<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="tumandroidcourse2017.remoteapiserverconnect.MainActivity" >

    <com.nhaarman.supertooltips.ToolTipRelativeLayout
        android:id="@+id/activity_main_tooltipRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
    </com.nhaarman.supertooltips.ToolTipRelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_logo"
                android:src="@mipmap/ic_launcher_gripper"
                android:layout_width="@dimen/main_logoDimen"
                android:layout_height="@dimen/main_logoDimen"
                android:layout_marginTop="@dimen/main_topToLogo"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/text_vrep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_logo"
                android:layout_marginTop="@dimen/main_logoToHeader"
                android:layout_centerHorizontal="true"
                android:text="@string/text_vrep"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_header1FontSize"
                android:textStyle="bold"
                android:onClick="onClickHeader" />

            <TextView
                android:id="@+id/text_controller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_vrep"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/text_controller"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_header2FontSize"
                android:textStyle="bold"
                android:onClick="onClickHeader" />

            <ImageView
                android:id="@+id/img_help"
                android:src="@drawable/ic_help"
                android:layout_width="@dimen/gen_smallIcon"
                android:layout_height="@dimen/gen_smallIcon"
                android:layout_below="@id/text_controller"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/main_headerToTooltip"
                android:layout_marginEnd="@dimen/gen_border" />

            <ImageView
                android:id="@+id/img_ipAddress"
                android:src="@drawable/ic_laptop_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_help"
                android:layout_marginTop="@dimen/main_tooltipToInputFields"
                android:layout_marginStart="@dimen/gen_border" />

            <EditText
                android:id="@+id/input_ipAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_ipAddress"
                android:layout_alignTop="@id/img_ipAddress"
                android:layout_alignBottom="@id/img_ipAddress"
                android:layout_alignEnd="@id/img_help"
                android:layout_marginStart="@dimen/main_inputFieldsSpacing"
                android:background="@android:color/transparent"
                android:hint="@string/text_ip"
                android:textColorHint="@color/gray"
                android:textColor="@android:color/black"
                android:ems="10"
                android:inputType="phone" />

            <ImageView
                android:id="@+id/img_port"
                android:src="@drawable/ic_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_ipAddress"
                android:layout_marginTop="@dimen/main_inputFieldsSpacing"
                android:layout_alignStart="@id/img_ipAddress" />

            <EditText
                android:id="@+id/input_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_port"
                android:layout_alignTop="@id/img_port"
                android:layout_alignBottom="@id/img_port"
                android:layout_alignStart="@id/input_ipAddress"
                android:layout_alignEnd="@id/img_help"
                android:background="@android:color/transparent"
                android:hint="@string/text_port"
                android:textColorHint="@color/gray"
                android:textColor="@android:color/black"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/button_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_port"
                android:layout_alignStart="@id/img_port"
                android:layout_alignEnd="@id/img_help"
                android:layout_marginTop="@dimen/main_inputFieldsToButton"
                android:background="@drawable/button"
                android:text="@string/text_connect"
                android:textColor="@android:color/white"
                android:onClick="onClickConnectButton" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
